--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -17,7 +17,7 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<!--The javascript code for main! -->
-	<script type="text/javascript" src="./javascript/jquery-main.js"></script>
+	<script type="text/javascript" src="../public/javascript/jquery-main.js"></script>
 
 	
 </script>
