--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -17,7 +17,7 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<!--The javascript code for main! -->
-	<script type="text/javascript" src="../public/javascript/jquery-main.js"></script>
+	<script type="text/javascript" src="/javascript/jquery-main.js"></script>
 
 	
 </script>
@@ -62,7 +62,7 @@
 					<div class="text">
 						<p>"This will be a graph representing this exercise!"</p>
 					</div>
-					<img id="graph" class="img" src="./img/graph_wire.png"/>
+					<img id="graph" class="img" src="/img/graph_wire.png"/>
 					<div id="graph-button">
 						<button type="button">Add to this activity!</button>
 					</div>
