--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -10,14 +10,14 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./javascript/animate.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
-	<script src="./node_modules/jquery/dist/jquery.js"></script>
+	<script src="/jquery/dist/jquery.js"></script>
 	<script src="./javascript/wow.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<!--The javascript code for main! -->
-	<script type="text/javascript" src="../public/javascript/jquery-main.js"></script>
+	<script type="text/javascript" src="/javascript/jquery-main.js"></script>
 
 	
 </script>
