Gotta debug main page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
 <!-- 	    </div>
 	</div> --> 
 	<header>
-		<nav>
+		<nav id="navy">
 			<a href="#" id="disabledLogo">Gymtracker</a>
 			<a href="./main" id="tryProduct">Try Our Product</a>
 		</nav>
