--- a/public/style.css
+++ b/public/style.css
@@ -44,15 +44,15 @@ img{
 	color: black;
     background: #000 url("./img/gym-testimony.jpg") center center;
 }
-a{
+/*a{
 	color:#FFF;
 	text-decoration: none;
 	font-weight: bold;
-}
-a:hover{
+}*/
+/*a:hover{
 	color: #FFF;
 	text-decoration: underline;
-}
+}*/
 header{
 	background: black;
 	width: 100%;
@@ -73,7 +73,7 @@ header a{
 	color: #ffff00;
 
 }
-nav{
+#navy{
 	font-size: 23px;
 	font-family: 'Lato', sans-serif;
 	padding: 30px 20px 20px 0;
@@ -116,16 +116,17 @@ a:hover#menu-icon{
 ul{
 	list-style: none;	
 }
-li a{
+
+
+/*li a{
 		color: #ffff00;
 
-}
-nav ul li{
-	display: inline-block;
-	
-	 margin-right: 30px;
+}*/
 
-}
+/*nav ul li{
+	display: inline-block;
+	 margin-right: 30px;
+}*/
 
 .current{
 	color: #FFF;
@@ -171,12 +172,14 @@ aside{
 	height: auto;
 	padding: 50px 10px 30px 0;
 }
+
 footer{
 	background: black;
 	width: 100%;
 	overflow: hidden;
 	opacity: 0.80;
 }
+
 footer p, footer h3{
 	color: #FFF;
 }
@@ -216,10 +219,10 @@ footer.second{
 	#menu-icon{
 		display: inline-block;
 	}
-	nav ul, nav:active ul{
+/*	nav ul, nav:active ul{
 		display: none;
-/*		position: absolute;
-*/		padding: 20px;
+		position: absolute;
+		padding: 20px;
 		background: #405580;
 		border: 1px solid #FFF;
 		right:20px;
@@ -251,6 +254,7 @@ footer.second{
 		width: 100%;
 		margin: auto;
 	}
+*/
 }
 .intrinsic-container {
   position: relative;
