--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -25,11 +25,12 @@
 </head>
 
 <body>
-	<header>
+
+<!-- 	<header>
 
 			<div class="navbar navbar-inverse navbar-fixed-left">
 				<ul class="nav navbar-nav">
-					<!-- <li><a href="#">Gymtracker</a></li> -->
+					<li><a href="#">Gymtracker</a></li> 
 
 
 					<li><a id="Overview" href="./main.html">Overview</a></li>
@@ -57,7 +58,64 @@
 
 				</ul>
 			</div>
-	</header>
+	</header> -->
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand pull-left" href="#">GymTracker</a>        
+        </div>
+        <div class="navbar-collapse collapse">
+           <ul class="nav navbar-nav">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-hover="dropdown">Chest Exercises<b class="caret"></b></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+
+                <li><a href="#">Shoulders</a></li>
+                <li><a href="#">Tricep</a></li>
+                <li><a href="#">Back</a></li>
+                <li><a href="#">Bicep</a></li>
+                <li><a href="#">Cardio</a></li>
+                <li><a href="#">Abdominal</a></li>
+
+                <!--
+                <li><a href="http://ixd.ucsd.edu/home/f16/mobile_app_tips.php">Other</a></li>
+
+                <li class="dropdown">
+                  <a href="http://ixd.ucsd.edu/home/f16/logistics.php" class="dropdown-toggle disabled" data-hover="dropdown">Logistics <b class="caret"></b></a>
+
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="http://ixd.ucsd.edu/home/f16/logistics.php#prereqs">Prerequisites</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#laptop">Equipment</a>
+                    </li>
+                    <li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#lab">Lab</a></li>
+                    <li>
+                      <a href="http://ixd.ucsd.edu/home/f16/logistics.php#assignments">Assignments</a>
+                    </li>
+                    <li>
+                      <a href="http://ixd.ucsd.edu/home/f16/logistics.php#grading">Grading</a>
+                    </li>
+                    <li>
+                      <a href="http://ixd.ucsd.edu/home/f16/logistics.php#faq">FAQ</a>
+                    </li>
+                  </ul>
+                </li>
+                -->
+           </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+  </div>
 
 			<div id="main">
 					<div class="text">
