--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -70,26 +70,82 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand pull-left" href="#">GymTracker</a>        
+            <a class="navbar-brand" href="#">GymTracker</a>        
         </div>
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-hover="dropdown">Chest Exercises<b class="caret"></b></a>
-                  <ul class="dropdown-menu" role="menu">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chest Exercises<b class="caret"></b></a>
+                  	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
                     <li><a class="activity" href="#">Push-ups</a></li>
                     <li><a class="activity" href="#">Bench-press</a></li>
                     <li><a class="addActivity" href="#">Add an Activity!</a></li>
                   </ul>
                 </li>
 
-                <li><a href="#">Shoulders</a></li>
-                <li><a href="#">Tricep</a></li>
-                <li><a href="#">Back</a></li>
-                <li><a href="#">Bicep</a></li>
-                <li><a href="#">Cardio</a></li>
-                <li><a href="#">Abdominal</a></li>
-
+                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Shoulders<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Triceps<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Back<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Biceps<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Cardio<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Triceps<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user -->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Other<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                  <!-- Change this later to list all activities for a specific user using jquery-->
+                    <li><a class="activity" href="#">Push-ups</a></li>
+                    <li><a class="activity" href="#">Bench-press</a></li>
+                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                  </ul>
+                </li>
                 <!--
                 <li><a href="http://ixd.ucsd.edu/home/f16/mobile_app_tips.php">Other</a></li>
 
