chart is responsive

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -174,18 +174,17 @@
         <!--/.nav-collapse -->
     </div>
   </div>
-
+  		<div class="container" style="margin-top: 55px;">
 			<div id="main">
-					<div class="text">
+					<div class="text container" style="text-align: center;">
 						<p>"This will be a graph representing this exercise!"</p>
 					</div>
 					<!--This is the chart!-->
-					<canvas id="myChart" ></canvas>
-					<div id="graph-button">
-						<button type="button">Add to this activity!</button>
-					</div>
+					<canvas id="myChart"></canvas>
+					<button id="graph-button" type="button" class="btn btn-default">Add Data</button>
 			</div>
-		<footer id="contact">
+		</div>
+<!-- 		<footer id="contact">
 		<div class="wow zoomIn animated" data-wow-delay="0.2s">
 		
 				<h3><b> Gymtracker .Inc</b> </h3>
@@ -206,7 +205,7 @@
 	</footer>
 	<footer class="second">
 		<p>Copyright Gymtracker</p>
-	</footer>
+	</footer> -->
 </body>
 </html>
 
