Table still needs some tuning

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -181,7 +181,127 @@
 					</div>
 					<!--This is the chart!-->
 					<canvas id="myChart"></canvas>
-					<button id="graph-button" type="button" class="btn btn-default">Add Data</button>
+
+
+<!-- 					<form class="form-inline">
+						  <div class="form-group">
+						    <input type="text" class="form-control" id="exampleInputName2" placeholder="Number of Repititions">
+						  </div>
+						  	<button id="graph-button" style="text-align: center;" type="button" class="btn btn-default btn-lg">Add Data</button>
+					</form> -->
+					<!-- Table -->
+<!-- 					<div class="container">
+					  <div class="row">
+					      <div class="panel panel-default">
+					        <div class="panel-heading">
+					          <h4>
+					            Workout Name 
+					          </h4>
+					        </div>
+					        <table class="table table-fixed">
+					          <thead>
+					            <tr>
+					              <th class="col-xs-6">Date</th><th class="col-xs-1">Repetitions</th>
+					            </tr>
+					          </thead>
+					          <tbody>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					            <tr>
+					              <td class="col-xs-6">Oct 10, 2017</td><td class="col-xs-1">23</td>
+					            </tr>
+					          </tbody>
+					        </table>
+					      </div>
+					  </div>
+					</div> -->
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+			    <h4>
+			        Workout Name 
+			    </h4>
+			</div>
+			<div style="height: 300px; overflow: auto;">
+				<table class="table table-striped">
+				  <thead>
+				    <tr>
+				      <th class="col-xs-6">#</th>
+				      <th class="col-xs-6">Name</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <td>1</td>
+				      <td>Something</td>
+				    </tr>
+				    <tr>
+				      <td>2</td>
+				      <td>Something</td>
+				    </tr>
+				    <tr>
+				      <td>3</td>
+				      <td>Something</td>
+				    </tr>
+				    <tr>
+				      <td>4</td>
+				      <td>Something</td>
+				    </tr>
+				    <tr>
+				      <td>5</td>
+				      <td>Something</td>
+				    </tr>
+				    <tr>
+				      <td>6</td>
+				      <td>Something</td>
+				    </tr>
+				  </tbody>
+				</table>
+			</div>
+		</div>
+
+
+					<!-- Input Form and Button -->
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Number of Repititions">
+					  <span class="input-group-btn">
+					    <button id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
+					  </span>
+					</div>
+	</div>
+
+
 			</div>
 		</div>
 <!-- 		<footer id="contact">
