fixed table bug

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -246,62 +246,58 @@
 					      </div>
 					  </div>
 					</div> -->
-	<div class="container">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-			    <h4>
-			        Workout Name 
-			    </h4>
-			</div>
-			<div style="height: 300px; overflow: auto;">
-				<table class="table table-striped">
-				  <thead>
-				    <tr>
-				      <th class="col-xs-6">#</th>
-				      <th class="col-xs-6">Name</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr>
-				      <td>1</td>
-				      <td>Something</td>
-				    </tr>
-				    <tr>
-				      <td>2</td>
-				      <td>Something</td>
-				    </tr>
-				    <tr>
-				      <td>3</td>
-				      <td>Something</td>
-				    </tr>
-				    <tr>
-				      <td>4</td>
-				      <td>Something</td>
-				    </tr>
-				    <tr>
-				      <td>5</td>
-				      <td>Something</td>
-				    </tr>
-				    <tr>
-				      <td>6</td>
-				      <td>Something</td>
-				    </tr>
-				  </tbody>
-				</table>
-			</div>
-		</div>
-
-
+				<div class="container">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+						    <h4>
+						        Workout Name 
+						    </h4>
+						</div>
+						<div style="height: 240px; overflow: auto;">
+							<table class="table table-striped">
+							  <thead>
+							    <tr>
+							      <th class="col-xs-6">Date</th>
+							      <th class="col-xs-6">Repetitions</th>
+							    </tr>
+							  </thead>
+							  <tbody>
+							    <tr>
+							      <td>1</td>
+							      <td>Something</td>
+							    </tr>
+							    <tr>
+							      <td>2</td>
+							      <td>Something</td>
+							    </tr>
+							    <tr>
+							      <td>3</td>
+							      <td>Something</td>
+							    </tr>
+							    <tr>
+							      <td>4</td>
+							      <td>Something</td>
+							    </tr>
+							    <tr>
+							      <td>5</td>
+							      <td>Something</td>
+							    </tr>
+							    <tr>
+							      <td>6</td>
+							      <td>Something</td>
+							    </tr>
+							  </tbody>
+							</table>
+						</div>
+					</div>
 					<!-- Input Form and Button -->
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Number of Repititions">
 					  <span class="input-group-btn">
 					    <button id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
 					  </span>
-					</div>
-	</div>
-
-
+					</div>					
+				</div>
 			</div>
 		</div>
 <!-- 		<footer id="contact">
