--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -119,11 +119,11 @@
 	<!-- <script src="/node_modules/jquery/dist/jquery.js"></script> -->
 	<script src="/javascript/wow.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="./javascript/jquery-code.js"></script>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+<!-- 	<script src="js/bootstrap.min.js"></script> -->
 
 </body>
 </html>
