--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -41,89 +41,29 @@
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chest Exercises<b class="caret"></b></a>
-                  	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
+                  {{#each categories}}
+                <li>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
+                	<ul class="dropdown-menu" role="menu">
+                	{{#each activities}}
 
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Shoulders<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
                   <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
+                    <li><a class="activity" href="#">{{activityName}}</a></li>
+                   
+                    {{/each}}
                   </ul>
                 </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Triceps<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Back<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Biceps<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Cardio<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Triceps<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user -->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Other<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">Push-ups</a></li>
-                    <li><a class="activity" href="#">Bench-press</a></li>
-                    <li><a class="addActivity" href="#">Add an Activity!</a></li>
-                  </ul>
-                </li>
+                {{/each}}
+
            </ul>
         </div>
         <!--/.nav-collapse -->
     </div>
     <!-- THIS IS WHERE I READ THE DATA FROM JSON FILE.-->
   </div>
-  		<div class="container">
-	  		{{#each	users}}
+  		<!-- <div class="container">
+	  		{{#each	categories}}
 			<div	class="project"	id="{{id}}">	
-		 	 	 <p>Id = {{id}}</p>	
-		 	 	 <p>password = {{password}}</p>	
-		 	 	 {{#each categories}}
 		 	 	 <p>category name = {{categoryName}}</p>
 		 	 	 	{{#each activities}}
 		 	 		 <p>activities name = {{activityName}}</p>
@@ -141,8 +81,7 @@
 
 		 	 </a>	
 		 </div>	
-	{{/each}}
-  		</div>
+  		</div>  -->
   		<div class="container" style="margin-top: 55px;">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
