Add activity now connected to navbar

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -42,19 +42,18 @@
            <ul class="nav navbar-nav">
                 <li class="dropdown">
                   {{#each categories}}
-                <li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
-                	<ul class="dropdown-menu" role="menu">
-                	{{#each activities}}
-
-                  <!-- Change this later to list all activities for a specific user using jquery-->
-                    <li><a class="activity" href="#">{{activityName}}</a></li>
-                   
-                    {{/each}}
-                  </ul>
-                </li>
+                	<li>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
+	                	<ul class="dropdown-menu" role="menu">
+		                	{{#each activities}}
+		                  	<!-- Change this later to list all activities for a specific user using jquery-->
+		                    	<li><a class="activity" href="#">{{activityName}}</a></li>
+		                    {{/each}}
+		                    <li class="addActivity"><a class="activity" href="#">Add an activity!</a></li>
+	                  	</ul>
+                	</li>
                 {{/each}}
-
+                </li>
            </ul>
         </div>
         <!--/.nav-collapse -->
