--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -36,12 +36,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">GymTracker</a>        
+            <a class="navbar-brand disabled" href="#">GymTracker</a>        
         </div>
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
-                  {{#each categories}}
+                    {{#each categories}}
                 	<li>
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
 	                	<ul class="dropdown-menu" role="menu">
@@ -52,7 +52,7 @@
 		                    <li class="addActivity"><a class="activity" href="#">Add an activity!</a></li>
 	                  	</ul>
                 	</li>
-                {{/each}}
+                	{{/each}}
                 </li>
            </ul>
         </div>
