--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,5 +26,28 @@
   </div>
 </form>
 
+<hr>
+
+<form method="get" action="/add">
+
+<h2>Sign Up Form</h2>
+
+  <div class="container">
+    <label><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="name" required>
+
+    <label><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="pass" required>
+        
+    <button type="submit">Sign up</button>
+    <input type="checkbox" checked="checked"> Remember me
+  </div>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div>
+</form>
+
 </body>
 </html>
