--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -7,7 +7,9 @@
 	<meta name = "viewport" content ="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./javascript/blueberry.css" />
 	<link rel ="stylesheet" href="style.css" type = "text/css" />
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<!-- 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./javascript/animate.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
 	<script src="/jquery/dist/jquery.js"></script>
@@ -15,7 +17,7 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 
 	<!--The javascript code for charts! -->
 	<script src="/javascript/Chart.bundle.js"></script>
@@ -125,6 +127,8 @@
 				</div>
 			</div>
 		</div>
+
+		<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
 
