--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -6,10 +6,12 @@
 	<meta httmp-equiv="X-ua-Compatible" content = "IE=edge">
 	<meta name = "viewport" content ="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./javascript/blueberry.css" />
+
 	<link rel ="stylesheet" href="style.css" type = "text/css" />
 <!-- 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="/css/bootstrap.css" rel="stylesheet">
+
 	<link rel="stylesheet" href="./javascript/animate.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
 	<script src="/jquery/dist/jquery.js"></script>
@@ -128,7 +130,7 @@
 			</div>
 		</div>
 
-		<script src="/js/bootstrap.min.js"></script>
+		<script src="/javascript/bootstrap.js"></script>
 </body>
 </html>
 
