Can add new activity, still need to link to main page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
 
 <h2>Login Form</h2>
 
-<form action="./main">
+<form action="./main" method="get">
 
 
   <div class="container">
@@ -25,6 +25,10 @@
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
+
+
+
+<!-- This will handle the new users issue for now, can change later if we need to -->
 
 <hr>
 
