--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -5,14 +5,14 @@
 	<title> </title>
 	<meta httmp-equiv="X-ua-Compatible" content = "IE=edge">
 	<meta name = "viewport" content ="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./javascript/blueberry.css" />
+<!-- 	<link rel="stylesheet" href="/javascript/blueberry.css" /> -->
 
-	<link rel ="stylesheet" href="style.css" type = "text/css" />
+	<link rel ="stylesheet" href="style.css" type="text/css">
 <!-- 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
 	<link href="/css/bootstrap-theme.css" rel="stylesheet">
 	<link href="/css/bootstrap.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="./javascript/animate.css">
+<!-- 	<link rel="stylesheet" href="/javascript/animate.css"> -->
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
 	<script src="/jquery/dist/jquery.js"></script>
 	<script src="/javascript/wow.min.js"></script>
