main page showing username, category, and activity

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
 
 <h2>Login Form</h2>
 
-<form action="./main" method="get">
+<form action="./motivate" method="get">
 
 
   <div class="container">
