Connected unique pages together

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -57,7 +57,7 @@
 	                  	</ul>
                 	</li>
                 	{{/each}}
-                	<li><a class="activity" href="./activity/{{name}}">Add an activity!</a></li>
+                	<li><a class="activity" href="/activity/{{name}}">Add an activity!</a></li>
                 </li>
            </ul>
         </div>
