Added alert on creation of new activity

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -33,7 +33,7 @@
         <label for="act" style="font-size: 25px;"><b>Activity:</b></label>
         <input type="text" class="form-control" placeholder="Enter Activity Name" name="actName" id="act" required>
       </div>
-      <button type="submit" style="margin-left: 15px;" class="btn btn-success btn-lrg">Create New Activity</button>
+      <button type="submit" id="createdActivity" style="margin-left: 15px;" class="btn btn-success btn-lrg">Create New Activity</button>
   </div>
 
   </form>
@@ -41,6 +41,7 @@
 </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/javascript/jquery-activity.js"></script>
   <script src="/javascript/bootstrap.js"></script>
   <script>function goBack() {window.history.back();}</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
