--- a/views/motivate.handlebars
+++ b/views/motivate.handlebars
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
           <h2>Motivational Quotes</h2>
-          <button><a href='./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}'>Let's Go!</a></button>
+          <button><a href='./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{dataArray}}'>Let's Go!</a></button>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery.js"></script>
