Made tiny data element in main invisible

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -129,8 +129,7 @@
 				</div>
 			</div>
 		</div>
-		<a id="array">{{dataArray}}</a>
-		<p> {% data %} </p>
+		<a id="array" style="display:none;">{{dataArray}}</a>
 		<script src="/javascript/bootstrap.js"></script>
 </body>
 </html>
