--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -70,7 +70,7 @@
   		<div class="container" style="margin-top: 55px;">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
-						<p>"This will be a graph representing this exercise!"</p>
+						<p>{{defaultActivity}}</p>
 					</div>
 					<!--This is the chart!-->
 					<canvas id="myChart"></canvas>
