trying to add workout name

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -80,7 +80,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 						    <h4>
-						        Workout Name 
+						        {{actName}}
 						    </h4>
 						</div>
 						<div style="height: 240px; overflow: auto;">
@@ -130,7 +130,6 @@
 			</div>
 		</div>
 		<a id="array">{{dataArray}}</a>
-		<p> {% data %} </p>
 		<script src="/javascript/bootstrap.js"></script>
 </body>
 </html>
