--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -80,7 +80,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 						    <h4>
-						        {{actName}}
+						        {{defaultActivity}}
 						    </h4>
 						</div>
 						<div style="height: 240px; overflow: auto;">
