fixed add activity to main bug

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -87,7 +87,7 @@
 							<table class="table table-striped">
 							  <thead>
 							    <tr>
-							      <th class="col-xs-6">Date</th>
+							      <th class="col-xs-6">Day</th>
 							      <th class="col-xs-6">Repetitions</th>
 							    </tr>
 							  </thead>
