--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -7,7 +7,7 @@
 <div class="container">
   <button type="button" onclick="goBack()" class="btn btn-primary btn-lrg" style="margin-top: 35px;">Go Back</button>
   <br>
-  <a href="/main/{{uname}}/{{defaultCategory}}/{{defaultActivity}}">HOME</a>
+  <a href="/main/{{uname}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}">HOME</a>
 </div>
 
 <div class="container" style="margin-top: 100px;">
