--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,12 +82,12 @@
 	</div>
 	<div class="clear"></div>
 
-	<div class="testimony">
+	<!-- <div class="testimony">
 		<h1>Testimony</h1>
 		<div class="intrinsic-container">
 			<iframe src="https://www.youtube.com/embed/v0uscIbY3nk" allowfullscreen></iframe>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="clear"></div>
 
