Fixed a bug where when you add an activity, click that activity, then click to another activity it crashes

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -51,7 +51,7 @@
 	                	<ul class="dropdown-menu" role="menu">
 		                	{{#each activities}}
 		                  	<!-- Change this later to list all activities for a specific user using jquery-->
-		                    	<li><a class="activity" href="/main/{{../../name}}/{{../categoryName}}/{{activityName}}/{{../../dataArray}}">{{activityName}}</a></li>
+		                    	<li><a class="activity" href="/main/{{../../name}}/{{../categoryName}}/{{activityName}}/[]">{{activityName}}</a></li>
 		                    {{/each}}
 		                    <!-- <li class="addActivity"><a class="activity" href="#">Add an activity!</a></li> -->
 	                  	</ul>
