--- a/views/motivate.handlebars
+++ b/views/motivate.handlebars
@@ -8,7 +8,7 @@
 <body>
   <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <iframe opacity=".5" frameborder="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/n1GUQVo1Lps?autoplay=1&controls=0&showinfo=0&autohide=1">
+    src="https://youtube.com/embed/n1GUQVo1Lps?autoplay=1&controls=0&showinfo=0&autohide=1&start=20">
   </iframe>
 </div>
         <div class="container">
