--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
 	<header>
 		<nav id="navy">
 			<a href="#" id="disabledLogo">Gymtracker</a>
-			<a href="./login" id="tryProduct">Try Our Product</a>
+			<a href="./login" id="tryProduct">Login/Sign Up</a>
 		</nav>
 	</header>
 	<div  background-color: white>
