added logout button

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -58,6 +58,7 @@
                 	</li>
                 	{{/each}}
                 	<li><a class="activity" href="/activity/{{name}}">Add an activity!</a></li>
+                	<li><a href="/">Log Out</a></li>
                 </li>
            </ul>
         </div>
