finished addData.js

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -121,7 +121,7 @@
 					</div>
 					<!-- Input Form and Button -->
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Number of Repititions">
+						<input type="text" class="form-control" placeholder="Number of Repititions" required>
 					  <span class="input-group-btn">
 					    <button id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
 					  </span>
