Added some styling to add activity page

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -2,17 +2,16 @@
 <html>
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 <body>
 
-<div class="container">
-  <button type="button" onclick="goBack()" class="btn btn-primary btn-lrg" style="margin-top: 35px;">Go Back</button>
-  <br>
-  <a href="/main/{{uname}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}">HOME</a>
+<div style="margin-top: 70px;" class="container">
+  <a href="/main/{{uname}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}"><img src="/img/back.PNG"></a>
 </div>
 
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-top: 80px;">
 
-<h1 class="jumbotron" style="text-align: center; font-size: 50px;"">New Activity</h1>
+<h1 class="jumbotron" style="text-align: center; font-size: 90px; font-family: 'Rubik', sans-serif;"">New Activity</h1>
 
   <form action="addActivity/{{uname}}/">
   <div class="container">
