--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -98,23 +98,12 @@
 							    </tr>
 							    <tr>
 							      <td>2</td><td>Something</td>
-
 							    </tr>
 							    <tr>
-							      <td>3</td>
-							      <td>Something</td>
+							      <td>3</td><td>Something</td>
 							    </tr>
 							    <tr>
-							      <td>4</td>
-							      <td>Something</td>
-							    </tr>
-							    <tr>
-							      <td>5</td>
-							      <td>Something</td>
-							    </tr>
-							    <tr>
-							      <td>6</td>
-							      <td>Something</td>
+							      <td>4</td><td>Something</td>
 							    </tr>
 							  </tbody>
 							</table>
