Font styling for main page

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -13,6 +13,7 @@
 	<link href="/css/bootstrap.css" rel="stylesheet">
 
 <!-- 	<link rel="stylesheet" href="/javascript/animate.css"> -->
+	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
 	<script src="/jquery/dist/jquery.js"></script>
 	<script src="/javascript/wow.min.js"></script>
@@ -68,10 +69,10 @@
   </div>
   		
 
-  		<div class="container" style="margin-top: 55px;">
+  		<div class="container" style="margin-top: 50px;">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
-						<p>{{defaultActivity}}</p>
+						<h3 style="font-family: 'Rubik', sans-serif;"><u><b>{{defaultActivity}}</b></u></h3>
 					</div>
 					<!--This is the chart!-->
 					<canvas id="myChart"></canvas>
@@ -80,16 +81,16 @@
 				<div class="container">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-						    <h4>
+						    <h4 style="font-family: 'Rubik', sans-serif;">
 						        {{defaultActivity}}
 						    </h4>
 						</div>
-						<div style="height: 240px; overflow: auto;">
+						<div style="height: 190px; overflow: auto;">
 							<table class="table table-striped">
 							  <thead>
 							    <tr>
-							      <th class="col-xs-6">Day</th>
-							      <th class="col-xs-6">Repetitions</th>
+							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Day</th>
+							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Repetitions</th>
 							    </tr>
 							  </thead>
 							  <tbody id="tableBody">
@@ -103,7 +104,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Number of Repititions" required>
 					  <span class="input-group-btn">
-					    <button id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
+					    <button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
 					  </span>
 					</div>					
 				</div>
