--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -11,6 +11,7 @@
 <!-- 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
 	<link href="/css/bootstrap-theme.css" rel="stylesheet">
 	<link href="/css/bootstrap.css" rel="stylesheet">
+    <link rel ="stylesheet" href="/css/style-footer.css" type = "text/css" />
 
 <!-- 	<link rel="stylesheet" href="/javascript/animate.css"> -->
 	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
@@ -111,7 +112,22 @@
 			</div>
 		</div>
 		<a id="array" style="display:none;">{{dataArray}}</a>
+
 		<script src="/javascript/bootstrap.js"></script>
 </body>
+<footer id="contact">
+	<div class="wow zoomIn animated" data-wow-delay="0.2s center-block">
+		<section>
+			<h3><b> Gymtracker .Inc</b> </h3>
+			<p><b>650-520-0599</b><br><br>
+				gymtracker@gmail.com<br><br>
+				
+
+			</p>
+		</section>
+
+		
+	</div>
+</footer>
 </html>
 
