--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -2,7 +2,9 @@
 form {
     border: 3px solid #f1f1f1;
 }
-
+h1{
+    color: red;
+}
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -27,7 +29,11 @@ button {
     padding: 10px 18px;
     background-color: #f44336;
 }
-
+.signupbtn{
+    width: auto;
+    padding: 10px 18px;
+    background-color: #4CAF50;
+}
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
