--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 	<meta httmp-equiv="X-ua-Compatible" content = "IE=edge">
 	<meta name = "viewport" content ="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./javascript/blueberry.css" />
-	<link rel ="stylesheet" href="style.css" type = "text/css" />
+	<link rel ="stylesheet" href="/css/style.css" type = "text/css" />
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./javascript/animate.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
