try to fix adding data

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -103,9 +103,9 @@
 					</div>
 					<!-- Input Form and Button -->
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Number of Repititions" required>
+						<input id="numRep-Textfield" type="text" class="form-control" placeholder="Number of Repititions" required>
 					  <span class="input-group-btn">
-					    <button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="button" class="btn btn-default">Add Repetitions!</button>
+					    <button id="addData-button" style="font-family: 'Rubik', sans-serif;"  type="button" class="btn btn-default">Add Repetitions!</button>
 					  </span>
 					</div>					
 				</div>
@@ -121,12 +121,12 @@
 			<h3><b> Gymtracker .Inc</b> </h3>
 			<p><b>650-520-0599</b><br><br>
 				gymtracker@gmail.com<br><br>
-				
+
 
 			</p>
 		</section>
 
-		
+
 	</div>
 </footer>
 </html>
