--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -69,7 +69,7 @@
   </div>
   		
 
-  		<div class="container" style="margin-top: 50px;">
+  		<div class="container" style="margin-top: 40px;">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
 						<h3 style="font-family: 'Rubik', sans-serif;"><u><b>{{defaultActivity}}</b></u></h3>
@@ -82,10 +82,10 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 						    <h4 style="font-family: 'Rubik', sans-serif;">
-						        {{defaultActivity}}
+						        <b>{{defaultActivity}}<b>
 						    </h4>
 						</div>
-						<div style="height: 190px; overflow: auto;">
+						<div style="height: 170px; overflow: auto;">
 							<table class="table table-striped">
 							  <thead>
 							    <tr>
