fix type in label

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -128,7 +128,7 @@
 <footer id="contact">
 	<div class="wow zoomIn animated" data-wow-delay="0.2s center-block">
 		<section>
-			<h3><b> Gymtracker .Inc</b> </h3>
+			<h3><b> GymTracker .Inc</b> </h3>
 			<p><b>650-520-0599</b><br><br>
 				gymtracker@gmail.com<br><br>
 
