--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
   <html>
   	<link rel ="stylesheet" href="/css/style-login.css" type = "text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="./javascript/jquery-login.js"></script>
   <body>
