--- a/views/motivate.handlebars
+++ b/views/motivate.handlebars
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!-- 	<link rel ="stylesheet" href="style-login.css" type = "text/css" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/motivate-page.css" />
 
